[package]
authors = ["Wojciech M. Zabolotny"]
edition = "2021"
readme = "README.md"
name = "wz-qemu4"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
stm32f1xx-hal = { version = "^0.9.0", features = ["stm32f100", "rt"]}
minimult_cortex-m = "0.3.3"
panic-semihosting  = "0.6.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
#[dependencies.stm32f4xx-hal]
#features = ["rt","stm32f405"]
#version = "^0.13.2"

# this lets you use `cargo fix`!
[[bin]]
name = "wz-qemu4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
